Adding full-text search
1) Changing of interdace and inner logic of ChunkStorage
2) Created WhooshChunkStorage
3) Deleted RAMChunkStorage and SQLChunkStorage
4) Performed tests to run the pipeline

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In a Jupyter Notebook cell\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -16,20 +36,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\User\\Desktop\\Диплом\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "# In a Jupyter Notebook cell\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\n",
     "import numpy as np\n",
     "print(np.__version__)\n",
     "\n",
-    "from mirage import WordCountingChunkingAlgorithm, FolderRawStorage, SQLiteChunkStorage, RAMChunkStorage\n",
+    "from mirage import WordCountingChunkingAlgorithm, FolderRawStorage, WhooshChunkStorage\n",
     "from mirage import HuggingFaceEmbedder, TextNormalizer\n",
     "from mirage import NatashaSentenceChunking, SemanticChunking\n",
     "import os\n",
@@ -38,52 +55,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "embedder = HuggingFaceEmbedder(model_name='sentence-transformers/distilbert-base-nli-stsb-quora-ranking', normalizer=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import logging\n",
     "logging.basicConfig(level=logging.ERROR)\n",
     "\n",
     "\n",
     "documents = FolderRawStorage('data_test')\n",
-    "chunks = RAMChunkStorage()\n",
-    "# algorithm = WordCountingChunkingAlgorithm(documents, chunks, words_amount=100)\n",
-    "\n",
-    "algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, threshold=0.7, max_chunk_size=1000)\n",
-    "algorithm.execute(visualize=True)"
+    "chunks = WhooshChunkStorage(scoring_function=\"BM25F\")\n",
+    "# algorithm = WordCountingChunkingAlgorithm(documents, chunks, words_amount=100)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "364\n"
+      "Splitting text into the sentences\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "8500it [00:00, 72936.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating embeddings of the sentences for semantic grouping\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8500/8500 [04:10<00:00, 33.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding chunks to the storage\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2726/2726 [00:35<00:00, 76.90it/s] \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'В 55-м году он повез сына в университет; прожил с ним три зимы в Петербурге, почти никуда не выходя и стараясь заводить знакомства с молодыми товарищами Аркадия. На последнюю зиму он приехать не мог,\\xa0– и вот мы видим его в мае месяце 1859 года, уже совсем седого, пухленького и немного сгорбленного: он ждет сына, получившего, как некогда он сам, звание кандидата.'"
+       "1"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.7, max_chunk_size=1000)\n",
+    "algorithm.execute(visualize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "289\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'—\\xa0Рыцарь этот когда-то неудачно пошутил, — ответил Воланд, поворачивая к Маргарите свое лицо с тихо горящим глазом, — его каламбур, который он сочинил, разговаривая о свете и тьме, был не совсем хорош. И рыцарю пришлось после этого прошутить немного больше и дольше, нежели он предполагал.'"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,29 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1024"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "emb = HuggingFaceEmbedder(normalizer = True, model_name='Alibaba-NLP/gte-large-en-v1.5')\n",
-    "emb.fit(chunks)\n",
-    "emb.get_dimensionality()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,20 +186,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 974/974 [19:42<00:00,  1.21s/it]\n"
+      " 53%|█████▎    | 1451/2726 [00:51<00:43, 29.49it/s]"
      ]
     }
    ],
    "source": [
     "from mirage.index.vector_index.ram_vector_index import L2RAMVectorIndex\n",
     "from mirage import FaissIndexFlatL2, FaissIndexIVFPQR\n",
-    "vector_index = FaissIndexIVFPQR(dimensionality=emb.get_dimensionality())\n",
-    "emb.convert_chunks_to_vector_index(chunks, vector_index, visualize=True)"
+    "vector_index = FaissIndexIVFPQR(dimensionality=embedder.get_dimensionality())\n",
+    "embedder.convert_chunks_to_vector_index(chunks, vector_index, visualize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,8 +240,8 @@
     }
    ],
    "source": [
-    "query = 'Что отрицает Базаров?'\n",
-    "query_vector = emb.embed(text=query)\n",
+    "query = 'Какой город был ненавидимым прокуратором Иудеи Понтием Пилатом?'\n",
+    "query_vector = embedder.embed(text=query)\n",
     "# print(query_vector)\n",
     "answer = vector_index.query(\n",
     "    query_vector, top_k=20\n",
@@ -198,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
