Normalized text for fulltext search

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# In a Jupyter Notebook cell\n",
     "%load_ext autoreload\n",
@@ -59,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder = HuggingFaceEmbedder(model_name='sentence-transformers/distilbert-base-nli-stsb-quora-ranking', normalizer=True)"
+    "embedder = HuggingFaceEmbedder(model_name='BAAI/bge-m3', normalizer=True)"
    ]
   },
   {
@@ -73,13 +64,13 @@
     "\n",
     "\n",
     "documents = FolderRawStorage('data_test')\n",
-    "chunks = WhooshChunkStorage(scoring_function=\"BM25F\")\n",
+    "chunks = WhooshChunkStorage(scoring_function=\"BM25F\", normalizer=True)\n",
     "# algorithm = WordCountingChunkingAlgorithm(documents, chunks, words_amount=100)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +84,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8500it [00:00, 72936.81it/s]\n"
+      "611it [00:00, 31855.61it/s]\n"
      ]
     },
     {
@@ -107,7 +98,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8500/8500 [04:10<00:00, 33.88it/s]\n"
+      "100%|██████████| 611/611 [00:42<00:00, 14.28it/s]\n"
      ]
     },
     {
@@ -121,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2726/2726 [00:35<00:00, 76.90it/s] \n"
+      "100%|██████████| 427/427 [00:02<00:00, 171.87it/s]\n"
      ]
     },
     {
@@ -130,49 +121,57 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.7, max_chunk_size=1000)\n",
+    "algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.5, max_chunk_size=1000)\n",
     "algorithm.execute(visualize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "289\n"
+      "152\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'—\\xa0Рыцарь этот когда-то неудачно пошутил, — ответил Воланд, поворачивая к Маргарите свое лицо с тихо горящим глазом, — его каламбур, который он сочинил, разговаривая о свете и тьме, был не совсем хорош. И рыцарю пришлось после этого прошутить немного больше и дольше, нежели он предполагал.'"
+       "'Пожав нам руки, он уже собирался усесться, как вдруг взор его упал на листок с забавными значками, который я только что рассматривал и оставил на столе.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "index = chunks.get_indexes()[24]\n",
+    "import random\n",
+    "index = chunks.get_indexes()[random.randint(1, 50)]\n",
     "print(len(chunks[index]))\n",
     "chunks[index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 53%|█████▎    | 1451/2726 [00:51<00:43, 29.49it/s]"
+      "100%|██████████| 427/427 [00:34<00:00, 12.46it/s]\n"
      ]
     }
    ],
@@ -199,48 +198,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[259.71051025390625, 269.3592529296875, 298.29864501953125, 302.4664001464844, 303.02880859375, 306.7166748046875, 307.56890869140625, 308.5302734375, 308.9055480957031, 309.5325927734375, 310.83770751953125, 316.61688232421875, 319.4338073730469, 324.6951599121094, 327.32177734375, 327.8720397949219, 327.8720397949219, 328.96356201171875, 330.14581298828125, 330.72845458984375]\n"
+      "[0.8335791230201721, 0.8566122055053711, 0.8726161122322083, 0.8734219670295715, 0.8924689292907715, 0.8948429822921753, 0.929951012134552, 0.9746432304382324, 0.9803217649459839, 0.9977196455001831, 1.003746509552002, 1.0152220726013184, 1.01560640335083, 1.0271902084350586, 1.0438331365585327, 1.0458725690841675, 1.0471690893173218, 1.0567314624786377, 1.0579125881195068, 1.0834579467773438]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['– В теперешнее время полезнее всего отрицание – мы отрицаем. –\\xa0Все? –\\xa0Все. –\\xa0Как? не только искусство, поэзию… но и… страшно вымолвить… –\\xa0Все,\\xa0– с невыразимым спокойствием повторил Базаров.',\n",
-       " 'Хотите, я вас представлю? –\\xa0Пожалуй… после этой кадрили. Базаров также обратил внимание на Одинцову. –\\xa0Это что за фигура?\\xa0– проговорил он. – На остальных баб не похожа.',\n",
-       " 'Прощаясь с Базаровым, Одинцова протянула ему руку и сказала:\\r\\n\\r\\n–\\xa0Мы еще увидимся, не правда ли? –\\xa0Как прикажете,\\xa0– ответил Базаров. –\\xa0В таком случае мы увидимся. Аркадий первый вышел на крыльцо; он взобрался в ситниковскую коляску. Его почтительно подсаживал дворецкий, а он бы с удовольствием его побил или расплакался.',\n",
-       " '–\\xa0Нет, зачем говорить о любви,\\xa0– промолвил Базаров,\\xa0– а вот вы упомянули об Одинцовой… Так, кажется, вы ее назвали? Кто эта барыня? –\\xa0Прелесть! прелесть!\\xa0– запищал Ситников. – Я вас представлю.',\n",
-       " '– Прощайте,\\xa0– заговорил он опять после небольшого молчания. – Желаю вам окончить это дело самым приятным образом; а я издали порадуюсь. Одинцова быстро повернулась к нему. –\\xa0Разве вы уезжаете? Отчего же вам теперь не остаться?',\n",
-       " '–\\xa0Все это нисколько не занимательно,\\xa0– произнес он вслух,\\xa0– особенно для вас; мы люди темные… –\\xa0А я, по-вашему, аристократка? Базаров поднял глаза на Одинцову. –\\xa0Да,\\xa0– промолвил он преувеличенно резко. Она усмехнулась.',\n",
-       " '–\\xa0Чего я хочу,\\xa0– повторила Одинцова и вздохнула. – Я очень устала, я стара, мне кажется, я очень давно живу. Да, я стара,\\xa0– прибавила она, тихонько натягивая концы мантильи на свои обнаженные руки. Ее глаза встретились с глазами Базарова, и она чуть-чуть покраснела. – Позади меня уже так много воспоминаний: жизнь в Петербурге, богатство, потом бедность, потом смерть отца, замужество, потом заграничная поездка, как следует…',\n",
-       " '– Не правда ли, Базаров, он сибарит? –\\xa0Я люблю комфорт жизни,\\xa0– произнес с важностию Ситников. – Это не мешает мне быть либералом. –\\xa0Нет, это мешает, мешает!\\xa0– воскликнула Евдоксия и приказала, однако, своей прислужнице распорядиться и насчет завтрака, и насчет шампанского. – Как вы об этом думаете?\\xa0– прибавила она, обращаясь к Базарову.',\n",
-       " 'Базаров держался в отдалении от этих «дрязгов», да ему, как гостю, не приходилось и вмешиваться в чужие дела. На другой день после приезда в Марьино он принялся за своих лягушек, за инфузории, за химические составы и все возился с ними. Аркадий, напротив, почел своею обязанностию если не помогать отцу, то, по крайней мере, показать вид, что он готов ему помочь. Он терпеливо его выслушивал и однажды подал какой-то совет, не для того, чтобы ему последовали, а чтобы заявить свое участие. Хозяйничанье не возбуждало в нем отвращения: он даже с удовольствием мечтал об агрономической деятельности, но у него в ту пору другие мысли зароились в голове.',\n",
-       " 'Ей все-таки было неловко с Базаровым, хотя она и ему сказала, и сама себя уверила, что все позабыто. Меняясь с ним самыми простыми речами, даже шутя с ним, она чувствовала легкое стеснение страха. Так люди на пароходе, в море, разговаривают и смеются беззаботно, ни дать ни взять, как на твердой земле; но случись малейшая остановка, появись малейший признак чего-нибудь необычайного, и тотчас же на всех лицах выступит выражение особенной тревоги, свидетельствующее о постоянном сознании постоянной опасности. Беседа Анны Сергеевны с Базаровым продолжалась недолго. Она начала задумываться, отвечать рассеянно и предложила ему наконец перейти в залу, где они нашли княжну и Катю.',\n",
-       " '–\\xa0Нет!\\xa0– сказал он и отступил на шаг назад. – Человек я бедный, но милостыни еще до сих пор не принимал. Прощайте-с и будьте здоровы. –\\xa0Я убеждена, что мы не в последний раз видимся,\\xa0– произнесла Анна Сергеевна с невольным движением. –\\xa0Чего на свете не бывает!\\xa0– ответил Базаров, поклонился и вышел.',\n",
-       " 'Он пригласил Кирсанова и Базарова к себе на бал и через две минуты пригласил их вторично, считая их уже братьями и называя их Кайсаровыми. Они шли к себе домой от губернатора, как вдруг из проезжающих мимо дрожек выскочил человек небольшого роста, в славянофильской венгерке, и с криком: «Евгений Васильевич!» – бросился к Базарову. –\\xa0А! это вы, герр Ситников,\\xa0– проговорил Базаров, продолжая шагать по тротуару,\\xa0– какими судьбами? –\\xa0Вообразите, совершенно случайно,\\xa0– отвечал тот и, обернувшись к дрожкам, махнул раз пять рукой и закричал: – Ступай за нами, ступай! У моего отца здесь дело,\\xa0– продолжал он, перепрыгивая через канавку,\\xa0– ну, так он меня просил…',\n",
-       " '–\\xa0Думайте, что хотите, но мне будет скучно, когда вы уедете. –\\xa0Аркадий останется,\\xa0– заметил Базаров. Одинцова слегка пожала плечом. –\\xa0Мне будет скучно,\\xa0– повторила она. –\\xa0В самом деле?',\n",
-       " '–\\xa0Известное дело: нервы,\\xa0– перебил Базаров. –\\xa0Может быть, только у него сердце предоброе. И он далеко не глуп. Какие он мне давал полезные советы… особенно… особенно насчет отношений к женщинам. –\\xa0Ага!',\n",
-       " 'Одинцова ничего не сказала, и Базаров умолк. Звуки фортепьяно долетели до них из гостиной. –\\xa0Что это Катя так поздно играет,\\xa0– заметила Одинцова. Базаров поднялся. –\\xa0Да, теперь точно поздно, вам пора почивать.',\n",
-       " '«absolument»[84 - Безусловно (фр.).] в смысле: «непременно», словом, выражался на том великорусско-французском наречии, над которым так смеются французы, когда они не имеют нужды уверять нашу братью, что мы говорим на их языке, как ангелы, «comme des anges». Аркадий танцевал плохо, как мы уже знаем, а Базаров вовсе не танцевал: они оба поместились в уголке; к ним присоединился Ситников. Изобразив на лице своем презрительную насмешку и отпуская ядовитые замечания, он дерзко поглядывал кругом и, казалось, чувствовал истинное наслаждение. Вдруг лицо его изменилось, и, обернувшись к Аркадию, он, как бы с смущением, проговорил: «Одинцова приехала». Аркадий оглянулся и увидал женщину высокого роста, в черном платье, остановившуюся в дверях залы.',\n",
-       " 'Он уехал из Москвы за границу для поправления здоровья и остался на жительство в Дрездене, где знается больше с англичанами и с проезжими русскими. С англичанами он держится просто, почти скромно, но не без достоинства; они находят его немного скучным, но уважают в нем совершенного джентльмена, «a perfect gentleman». С русскими он развязнее, дает волю своей желчи, трунит над самим собой и над ними; но все это выходит у него очень мило, и небрежно, и прилично. Он придерживается славянофильских воззрений: известно, что в высшем свете это считается tr&#232;s distingu&#233;.[154 - Весьма почтенным (фр.).] Он ничего русского не читает, но на письменном столе у него находится серебряная пепельница в виде мужицкого лаптя.',\n",
-       " 'Жизнь за жизнь. Взял мою, отдай свою, и тогда уже без сожаления и без возврата. А то лучше и не надо. –\\xa0Что ж?\\xa0– заметил Базаров,\\xa0– это условие справедливое, и я удивляюсь, как вы до сих пор… не нашли, чего желали. –\\xa0А вы думаете, легко отдаться вполне чему бы то ни было?',\n",
-       " 'А между тем Базаров не совсем ошибался. Он поразил воображение Одинцовой; он занимал ее, она много о нем думала. В его отсутствие она не скучала, не ждала его; но его появление тотчас ее оживляло; она охотно оставалась с ним наедине и охотно с ним разговаривала, даже тогда, когда он ее сердил или оскорблял ее вкус, ее изящные привычки. Она как будто хотела и его испытать, и себя изведать. Однажды он, гуляя с ней по саду, внезапно промолвил угрюмым голосом, что намерен скоро уехать в деревню к отцу…',\n",
-       " 'Базаров, сядьте возле меня на диван. Вы, может быть, не знаете, я ужасно вас боюсь. –\\xa0Это почему? Позвольте полюбопытствовать. –\\xa0Вы опасный господин; вы такой критик.']"
+       "['— Она была найдена тяжело раненной возле своего мертвого мужа.',\n",
+       " 'Так рассказывают служанки. Он умер, она при смерти.',\n",
+       " 'Вы кончили тем, что убили этого благородного человека и довели его жену до самоубийства.',\n",
+       " 'Возле окна корчилась его жена, прислонясь головой к стене. Рана ее была ужасна — кровь залила половину лица.',\n",
+       " 'Их хозяин лежал посреди комнаты лицом вниз. Он был мертв.',\n",
+       " 'Моя жена получила письмо из Америки — на конверте была американская марка. Жена смертельно побледнела, прочла письмо и швырнула в огонь.',\n",
+       " '— Если Илей умрет, мне все равно, что будет со мною, — сказал американец.',\n",
+       " 'Доктор удалился к своим пациентам.',\n",
+       " 'Я увидел, как из-за угла выползла темная согнутая фигура и уселась перед дверью. Схватив револьвер, я рванулся вперед, но жена судорожно обняла меня и удержала на месте. Я пытался оттолкнуть ее, но она вцепилась в меня еще отчаяннее.',\n",
+       " 'Он умер мгновенно и безболезненно.',\n",
+       " '— Вы трогали убитого? — спросил Холме.',\n",
+       " '— Его несомненно закрыла женщина, закрыла инстинктивно…',\n",
+       " 'Она смертельно перепугалась. Она ничего не говорит мне, но я вижу в глазах у нее ужас.',\n",
+       " 'Окно было закрыто на задвижку изнутри, обе женщины утверждали это с полной уверенностью.',\n",
+       " 'Я не могу оставить жену на ночь в одиночестве.',\n",
+       " 'Показания обеих женщин были в высшей степени точны.',\n",
+       " 'Она выстрелила сначала в него, потом в себя.',\n",
+       " '— Вы совершенно правы, сэр: значит, был третий выстрел и, следовательно, был третий человек.',\n",
+       " '«ИЛСИ, ГОТОВЬСЯ К СМЕРТИ»!',\n",
+       " '— Я стрелял в него, но и он стрелял в меня, — следовательно, это нельзя назвать убийством.']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = 'Какой город был ненавидимым прокуратором Иудеи Понтием Пилатом?'\n",
+    "query = 'убитая женщина'\n",
     "query_vector = embedder.embed(text=query)\n",
     "# print(query_vector)\n",
     "answer = vector_index.query(\n",
@@ -252,28 +251,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "На основе данного текста можно сделать вывод, что Базаров отрицает:\n",
-      "\n",
-      "1. Искусство и поэзию;\n",
-      "2. Любовь.\n",
-      "\n",
-      "Также стоит отметить, что Базаров явно противостоял идеям романтики и эмоциональному подходу к жизни, предпочитая более холодный и расчетливый взгляд на вещи. \n",
-      "\n",
-      "С одной стороны, он был скептически настроен по отношению к \"страшному\" предмету — любви, который мог вызвать слишком большие эмоции и затронуть самые чувственные области человеческой психики. Но с другой стороны, именно этот момент стал причиной его встречи со Ситниковым и началом нового знакомства с Одинцовой.\n",
-      "\n",
-      "Поэтому основными точками отрицания являются искусственный интерес к этим областям и стремление к осмысленному, практичному анализу вместо эмоциональных реакций. Однако важно понимать контекст этого отрицания: Базаров не полностью исключает возможность существования таких вещей, скорее он отказывается от эмоционального восприятия и цензуры, которые часто связаны с этими категориями.\n",
-      "15.157871961593628\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[ChunkNote(text='Если этот Аб Слени, живущий у Элриджа, действительно убийца и если он удерет, пока я сижу здесь, меня ждут крупные неприятности.', raw_document_index='человечки.txt'),\n",
+       " ChunkNote(text='В этом деле есть несколько ^пунктов, которые я еще не в состоянии вам разъяснить. Я в своих открытиях зашел уже так далеко, что будет благоразумнее, если я подожду еще немного, а потом объясню вам все сразу. — Как вам угодно, мистер Холме, лишь бы убийца не ушел от нас.', raw_document_index='человечки.txt')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "answer_fulltext = chunks.query(\"убийца\")\n",
+    "answer_fulltext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from mirage.inference.prompters.APILLM import LLM\n",
     "llm = LLM()\n",
