--- a/mirage/index/chunk_storages/test_fulltext.ipynb
+++ b/mirage/index/chunk_storages/test_fulltext.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from mirage import WhooshChunkStorage\n",
     "\n",
-    "storage = WhooshChunkStorage(scoring_function=\"BM25\")\n"
+    "storage = WhooshChunkStorage(scoring_function=\"BM25\", normalizer=True)\n"
    ]
   },
   {
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47d461ee-0201-4052-8543-7219df0c4d7c\n"
+      "4041eee6-751a-46ae-b927-ea334799e0d9\n"
      ]
     },
     {
@@ -133,8 +133,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47d461ee-0201-4052-8543-7219df0c4d7c A quick brown dog outpaces a fast fox\n",
-      "1c7add61-1e24-4021-bf90-715bd7cce892 A quick brown dog outpaces a fast fox\n"
+      "4041eee6-751a-46ae-b927-ea334799e0d9 A quick brown dog outpaces a fast fox\n",
+      "8614252c-0bc5-4dc7-b5ed-cfd1bcdae485 A quick brown dog outpaces a fast fox\n"
      ]
     }
    ],
@@ -163,10 +163,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2eefc5e7-d92a-4e66-b691-cc5a3bdfe10a'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "storage.add_chunk(\n",
+    "    \"Пить просто водку, даже из горлышка, – в этом нет ничего, кроме томления духа и суеты. Смешать водку с одеколоном – в этом есть известный каприз, но нет никакого пафоса. А вот выпить стакан «Ханаанского бальзама» – в этом есть и каприз, и идея, и пафос, и сверх того еще метафизический намек.\",\n",
+    "    doc2_index\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'пит прост водк горлышк кром томлен дух сует смеша водк одеколон известн каприз никак пафос вып стака ханаанск бальзам каприз иде пафос сверх метафизическ намек'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = storage.get_indexes()[0]\n",
+    "storage.get_normalized_text(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'doc_2'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "storage.query('водка')[0].raw_document_index"
+   ]
   }
  ],
  "metadata": {
