Change in the architecture (QueryResult)
Now both Fulltext Search Engine (Whoosh) and Vector Search Engine return the data in the format of QueryResult (mirage.index.QueryResult)
score, vector (None for fulltext), chunk_storage_key

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# In a Jupyter Notebook cell\n",
     "%load_ext autoreload\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -21,14 +30,6 @@
      "output_type": "stream",
      "text": [
       "1.26.4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "611it [00:00, 33775.10it/s]\n"
+      "611it [00:00, 50276.02it/s]\n"
      ]
     },
     {
@@ -98,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 611/611 [00:52<00:00, 11.67it/s]\n"
+      "100%|██████████| 611/611 [00:58<00:00, 10.53it/s]\n"
      ]
     },
     {
@@ -112,7 +113,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 427/427 [00:02<00:00, 156.39it/s]\n"
+      "100%|██████████| 427/427 [00:02<00:00, 150.76it/s]\n"
      ]
     },
     {
@@ -121,7 +122,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,30 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "153\n"
+      "88\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Вам, вероятно, кажется странным, мистер Холмс, что человек хорошего старинного рода вступает в брак с женщиной, ничего не зная о ее прошлом и о ее семье.'"
+       "'Этот маленький ребус он послал нам с первой почтой, а сам выехал сюда ближайшим поездом.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 427/427 [00:39<00:00, 10.70it/s]\n"
+      "100%|██████████| 427/427 [00:43<00:00,  9.85it/s]\n"
      ]
     }
    ],
@@ -198,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +227,7 @@
        " '— Я стрелял в него, но и он стрелял в меня, — следовательно, это нельзя назвать убийством.']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,13 +239,41 @@
     "answer = vector_index.query(\n",
     "    query_vector, top_k=20\n",
     ")\n",
-    "print([element.distance for element in answer])\n",
+    "print([element.score for element in answer])\n",
     "[chunks[element.chunk_storage_key] for element in answer]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.189961190126932\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[QueryResult(score=7.189961190126932, chunk_storage_key='76776b4e-438f-4fc5-98f8-e754a1ac88d4', vector=None),\n",
+       " QueryResult(score=4.863961050920773, chunk_storage_key='d6fc642c-4f88-4e29-8b4c-4ea1e506c992', vector=None)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks.query('убийство')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +282,7 @@
      "text": [
       "Amount of vectors loaded in quorum: 189193\n",
       "word \"быть\" is presented in word vectors: True\n",
-      "set of POS in w2v model: {'PROPN', 'X', 'INTJ', 'ADJ', 'NUM', 'SYM', 'ADV', 'NOUN', 'VERB'}\n",
+      "set of POS in w2v model: {'PROPN', 'X', 'NOUN', 'VERB', 'ADV', 'INTJ', 'ADJ', 'SYM', 'NUM'}\n",
       "Rules of synonimization: {'ADJ': 0.5, 'VERB': 0.65}\n",
       " For word \"убил\" obtained synonims:\n",
       "[('убивать_VERB', 0.7964877486228943), ('застреливать_VERB', 0.704032838344574), ('убить_ADJ', 0.6715459227561951), ('застрелить_VERB', 0.6328871250152588), ('убивать_NOUN', 0.6270444989204407), ('убитый_ADJ', 0.6136345863342285), ('убивать_ADJ', 0.5941329598426819), ('погибать_VERB', 0.5825400352478027), ('казнять_VERB', 0.573449432849884), ('зарезать_VERB', 0.5693537592887878), ('зарублять_VERB', 0.5649162530899048), ('расстреливать_VERB', 0.5634232759475708), ('убитый_VERB', 0.5592145919799805), ('ранить_VERB', 0.558910608291626), ('зарубить_VERB', 0.5410849452018738), ('избить_VERB', 0.531154990196228), ('застрелиться_VERB', 0.5310904383659363), ('изувечить_VERB', 0.5287972092628479), ('изувечивать_VERB', 0.5250490307807922), ('стрелявший_VERB', 0.5229915380477905)]\n",
@@ -300,22 +322,22 @@
     {
      "data": {
       "text/plain": [
-       "[ChunkNote(text='— Его несомненно закрыла женщина, закрыла инстинктивно…', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Я угрожал ей, да простит меня бог, но я не коснулся бы ни одного волоса на ее прекрасной голове.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Если же вы думаете, что я в состоянии ранить ту женщину, значит, вы не знаете ни ее, ни меня. Ни один мужчина никогда не любил ни одной женщины так, как я любил ее.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Показания обеих женщин были в высшей степени точны.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Это был высокий, красивый, смуглый мужчина в сером костюме и широкополой шляпе, с черной жесткой бородой и крупным хищным носом.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Вам, вероятно, кажется странным, мистер Холмс, что человек хорошего старинного рода вступает в брак с женщиной, ничего не зная о ее прошлом и о ее семье.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Вы кончили тем, что убили этого благородного человека и довели его жену до самоубийства.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Мистер Хилтон Кьюбитт убит выстрелом прямо в сердце.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='— Отвратительное состояние — чувствовать, что ты со всех сторон окружен какими-то неизвестными, невидимыми людьми, которые пытаются вовлечь тебя в какую-то беду, но еще нестерпимее видеть при этом, как изо дня в день постепенно убивают твою жену!', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='На столе кабинета лежала дамская сумочка — нарядная маленькая сумочка из крокодиловой кожи, отделанная серебром. Холме раскрыл сумочку и вытряхнул на стол ее содержимое.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Отвечая инспектору Мартину, обе женщины заявили, что все двери были заперты изнутри и что никому не удалось бы ускользнуть из дома. Отвечая Холмсу, они обе вспомнили, что почувствовали запах пороха, как только выбежали из своих комнат во втором этаже. — Советую вам обратить самое серьезное внимание на этот факт, — сказал Холме инспектору Мартину.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Окно было закрыто на задвижку изнутри, обе женщины утверждали это с полной уверенностью.', raw_document_index='человечки.txt'),\n",
-       " ChunkNote(text='Если ты на мне женишься, Хилтон, ты женишься на женщине, которая сама ничего постыдного не совершила, но ты должен поверить мне на слово и позволить умолчать обо всем, что было со мною до того, как я стала твоей. Если это условие кажется тебе слишком тяжелым, возвращайся в Норфолк и предоставь мне продолжать ту одинокую жизнь, которую я вела до встречи с тобой».', raw_document_index='человечки.txt')]"
+       "[QueryResult(score=4.235756319691941, chunk_storage_key='18cb715c-dd8f-45a2-93a0-b40cae5ec09f', vector=None),\n",
+       " QueryResult(score=6.308011912347461, chunk_storage_key='b3cfce21-e1d5-4520-8533-b6344f049728', vector=None),\n",
+       " QueryResult(score=6.006355784088442, chunk_storage_key='215ee618-aff7-4829-83d9-cc2b831a5f72', vector=None),\n",
+       " QueryResult(score=4.06325984511512, chunk_storage_key='dcd5cf3c-8e34-4187-b5e8-fcad76fcd387', vector=None),\n",
+       " QueryResult(score=5.0419157615989665, chunk_storage_key='570e6cda-8b72-4bb1-b306-bb81b62a4cc4', vector=None),\n",
+       " QueryResult(score=5.194963006640833, chunk_storage_key='5951ef07-7dda-4768-beae-a27d9efb077e', vector=None),\n",
+       " QueryResult(score=6.8618212833083625, chunk_storage_key='4330f942-8b47-45be-b307-43ee20669153', vector=None),\n",
+       " QueryResult(score=2.467047428704616, chunk_storage_key='586b85b3-e6d1-45d1-8e6b-56b9cb927672', vector=None),\n",
+       " QueryResult(score=6.8618212833083625, chunk_storage_key='9c27a6d0-ce9c-4aca-a3a0-71d5dfb97aac', vector=None),\n",
+       " QueryResult(score=4.8792679002267425, chunk_storage_key='f8032a38-3a36-4799-829b-e25b623ff702', vector=None),\n",
+       " QueryResult(score=6.544851030792073, chunk_storage_key='6dae2380-38a1-4b69-9821-d2d1e030cc86', vector=None),\n",
+       " QueryResult(score=7.008904750645987, chunk_storage_key='12ebb40d-49ef-4565-a3f9-8fcdb1a34989', vector=None),\n",
+       " QueryResult(score=2.467047428704616, chunk_storage_key='76e2f095-6ce5-4b5a-a899-b43741452bb3', vector=None)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
